# re-hs

./: README.md  cabal.project  re-hs.cabal
cbits/: a.out  r  s  simd.c
src/RE/: StringSearch.hs
test/: Test.hs
