cabal-version:      2.2
category:           Random, Vector
build-type:         Simple

name:               re-hs
synopsis:           regular expressions
version:            0.1

author:             Callan McGill
maintainer:         callan.mcgill@gmail.com
homepage:           https://github.com/Boarders/re-hs
copyright:          2019
license:            BSD-3-Clause
description:

extra-source-files: CHANGELOG.md


source-repository head
  type:     git
  location: https://github.com/Boarders/re-hs


Library

  cc-options: -Wno-incompatible-pointer-types

  c-sources: cbits/simd.c

  hs-source-dirs:   src

  ghc-options:      -Wall
                    -fexpose-all-unfoldings
                    -fspecialise-aggressively
                    -fllvm

  build-depends:    base      
                  , primitive
                  , bytestring
                  , bitvec
                  , ghc-prim
                  , pipes
                  , transformers

  exposed-modules:  RE.NFA
                    RE.StringSearch

  other-modules:

  default-language: Haskell2010


Test-Suite test

  type:             exitcode-stdio-1.0

  main-is:          Test.hs

  hs-source-dirs:   test

  ghc-options:      -Wall
                    -fexpose-all-unfoldings
                    -fspecialise-aggressively
                    -Wincomplete-patterns
                    -fllvm

  build-depends:    re-hs
                  , base                   
                  , QuickCheck             
                  , tasty                  
                  , tasty-quickcheck
                  , bytestring
                  , primitive


  other-modules:                        

  default-language: Haskell2010


